--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,20 +1,11 @@
 * {
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  // min-height: 100%;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // padding: 3rem;
-  // padding: 1rem 2rem;
-  // background-color: yellowgreen;
 }
 
 .app {
+  // background-color: indigo;
   max-width: 1900px;
   margin: 0 auto;
   // padding: 0 1rem;
