--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  max-width: 1900px;
+  // max-width: 1900px;
   background: #fff;
   // background-color: #ccc;
   padding: 1rem;
