--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,12 +1,13 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  // margin: 0px;
+  // padding: 0px;
   box-sizing: border-box;
 }
 
 .app {
   // background-color: indigo;
   max-width: 1900px;
+
   margin: 0 auto;
   // padding: 0 1rem;
 }
