--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   /* height: auto; */
   margin-top: 4rem;
   /* height: 300px; */
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .carrousel_image {
