--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -1,15 +1,10 @@
 .center_wrapper {
-  //   background-color: lightcoral;
-  margin-top: 2rem;
-  //   border-bottom: 1px solid #008bcc;
   .vn_wrapper {
-    // background-color: lightseagreen;
     display: flex;
     flex-direction: column;
     justify-content: start;
     margin-bottom: 3rem;
     .wrapper_box {
-      //   background-color: indigo;
       display: flex;
       flex-direction: column;
       margin: 0 auto;
@@ -30,7 +25,7 @@
             transition: all 500ms ease;
 
             &:hover {
-              background: #888;
+              background: #999;
               a {
                 color: #fff;
               }
@@ -40,6 +35,7 @@
               margin: 70px 0px 20px 0px;
               border-bottom: 1px solid #5d5d5d;
               padding-bottom: 10px;
+              color: #2867b2;
               margin-bottom: 2rem;
             }
 
@@ -76,6 +72,32 @@
               display: flex;
               justify-content: center;
               align-items: center;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1000px) {
+  .center_wrapper {
+    .vn_wrapper {
+      margin-top: 5rem;
+      .wrapper_box {
+        flex-direction: row;
+        .vn_item {
+          margin: 6rem 8rem;
+          .vn_outer {
+            width: 300px;
+            .vn_inner {
+              .vn_title {
+                font-size: 1rem;
+              }
+
+              .vn_icon_square {
+                left: 106px;
+              }
             }
           }
         }
