--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -2,6 +2,7 @@
   margin-top: 7rem;
   // background-color: lightcyan;
   width: 100%;
+  overflow: hidden;
   .slide {
     position: relative;
     margin-top: 1rem;
@@ -35,15 +36,17 @@
         position: absolute;
         background-color: #fff;
         opacity: 0.85;
-        // left: 5rem;
 
         border-radius: 10px;
 
         .text {
           font-size: 0.8rem;
-          // font-weight: bold;
-          line-height: 1.5em;
+          line-height: 1.7em;
           color: #3a3d3b;
+
+          @media (min-width: 1000px) {
+            font-size: 1rem;
+          }
         }
       }
       .photo-one {
@@ -57,21 +60,20 @@
         top: 7rem;
         left: 2rem;
         width: 80%;
-        padding: 0.7rem 2rem;
+        padding: 0.7rem 2rem 1rem 0;
       }
 
       .photo-three {
         left: 2rem;
         bottom: 5rem;
-        width: 70%;
-        padding: 1rem 2rem;
+        width: 256px;
+        padding-right: 1rem;
       }
 
       .photo-four {
-        width: 275px;
-        left: 2rem;
+        width: 70%;
+        left: 4rem;
         bottom: 7rem;
-        padding: 1rem 2rem;
       }
     }
   }
@@ -80,6 +82,23 @@
 @media (min-width: 400px) {
   .aboutus {
     margin-top: 9rem;
+    .slide {
+      .slide_box {
+        .photo-one,
+        .photo-two {
+          width: 300px;
+        }
+        .photo-two {
+          left: 4rem;
+        }
+        .photo-three {
+          left: 5rem;
+        }
+        .photo-four {
+          width: 280px;
+        }
+      }
+    }
   }
 }
 
@@ -89,8 +108,8 @@
     .slide {
       .slide_box {
         .photo-two {
-          left: 3rem;
-          top: 11rem;
+          left: 7rem;
+          top: 10rem;
         }
         .photo-three {
           left: 5rem;
@@ -98,6 +117,60 @@
 
         .photo-four {
           left: 5rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 700px) {
+  .aboutus {
+    .slide {
+      .slide_box {
+        .photo-one {
+          padding: 1rem 2rem;
+          top: 14rem;
+          left: 8rem;
+        }
+        .photo-three {
+          width: 390px;
+          left: 12rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1000px) {
+  .aboutus {
+    .slide {
+      .slide_box {
+        .photo-one {
+          width: 400px;
+          left: 20rem;
+        }
+        .photo-two {
+          left: 17rem;
+          width: 450px;
+        }
+        .photo-three {
+          width: 470px;
+          left: 20rem;
+        }
+        .photo-four {
+          width: 350px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1600px) {
+  .aboutus {
+    .slide {
+      .slide_box {
+        .photo-four {
+          left: 22rem;
         }
       }
     }
