styling sidedrawer and modal

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,5 @@
 @import "./components/project-list";
 @import "./components/header";
 @import "./components/contact";
+@import "./components//modal";
 @import "./components/slider";
