--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -1,33 +1,55 @@
 .ui.dimmer {
   z-index: 10000;
-
-  .modal_box {
+  .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: lightgreen; */
-
-    &-row {
-      width: 60%;
+    justify-content: center;
+    .modal_box {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
+      align-items: center;
+      color: #777;
+      padding: 0 1rem;
+      overflow-y: auto;
 
-      .left {
-        width: 30%;
-        /* background-color: lightseagreen; */
+      .modal_box-title {
+        font-size: 1.3rem;
+        color: #008bcc;
+        font-style: italic;
       }
 
-      .right {
-        padding-left: 1rem;
-        width: 70%;
-        /* background-color: lightcoral; */
+      &-row {
+        // background-color: indigo;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
 
-        .project {
-          margin: 0 0 10px 0;
+        .left {
+          width: 35%;
+          // background-color: lightseagreen;
         }
 
-        p {
-          margin: 0 0 5px 0;
+        .right {
+          padding-left: 2.5rem;
+          width: 70%;
+          // background-color: lightcoral;
+
+          ul {
+            padding: 0;
+            margin: 0;
+            margin-bottom: 5px;
+          }
+
+          .project {
+            margin: 0 0 10px 0;
+          }
+
+          p {
+            margin: 0 0 5px 0;
+            // background-color: lawngreen;
+          }
         }
       }
     }
